# Rest_Project

./: .pylintrc  manage.py  pyproject.toml  pyrightconfig.json
al_dente/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/static/css/: main.css
core/static/js/: reviews.js
core/static/scss/: main.css
core/templates/core/: base.html  contacts.html  home.html
core/templates/includes/: pagination.html
core/templatetags/: core_tags.py
events/: admin.py  forms.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/static/js/: events.js
events/templates/events/: event_detail.html  upcoming.html
gallery/: admin.py  models.py  urls.py  views.py
gallery/migrations/: 0001_initial.py
gallery/templates/gallery/: base_gallery.html  (+2 more)
menu/: admin.py  forms.py  models.py  urls.py  views.py
menu/migrations/: 0001_initial.py  0002_alter_dish_image.py  0002_category_is_active_and_more.py
reservations/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_table_color_table_rotation.py
reservations/utils/: telegram_bot.py
reviews/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_options.py
reviews/templatetags/: reviews_extras.py  stars.py
static/css/: main.css  main.css.map
static/scss/: _base.scss  _bootstrap_overrides.scss  _vars.scss  main.scss
team/: admin.py  models.py  urls.py  views.py
team/migrations/: 0001_initial.py
(+19 files in other folders)
