[tool.poetry]
name = "al-dente"
version = "0.1.0"
description = ""
authors = ["Alex Berezovsky <oxonkoalexey@gmail.com>"]
readme = "README.md"
packages = [{include = "al_dente", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"  
django = "^5.2.4"
openai = "^1.96.1"
markdown = "^3.8.2"
pillow = "^11.3.0"
django-stubs-ext = "^5.2.2"
mypy = "^1.17.0"
python-telegram-bot = "^22.3"
requests = "^2.32.4"
django-bootstrap-datepicker-plus = "^5.0.5"  
django-fancybox = "^0.1.6"
python-dotenv = "^1.1.1"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"